--- a/index.html
+++ b/index.html
@@ -9,6 +9,80 @@
     <title>Spotify</title>
 </head>
 <body>
-    
+    <div id="app-wrapper">
+
+        <!--INIZIO MAIN-->
+        <main>
+            <!--INIZIO NAV-->
+            <nav>
+                <div class="logo">
+                    logo
+                </div>
+
+                <div class="main-links">
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Cerca</a></li>
+                        <li><a href="">La tua libreria</a></li>
+                    </ul>
+                </div>
+
+                <div class="playlist-container">
+                    <div class="crea-playlist">
+                        <h2>PLAYLIST</h2>
+                        + Crea Playlist
+                    </div>
+
+                    <div class="wrapper-list">
+                        <div class="playlist-single-name">
+                            <ul>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="install-app">
+                    <div>Installa app</div>
+                    John Doe
+                </div>
+            </nav>
+            <!--FINE NAV-->
+
+            <!--INIZIO CONTENT-->
+            <div class="main-content">
+
+            </div>
+            <!--FINE CONTENT-->
+
+        </main>
+        <!--FINE MAIN-->
+
+        <!--INIZIO FOOTER-->
+        <footer>
+
+        </footer>
+        <!--FINE FOOTER-->
+
+        <!--UPGRADE TASTO-->
+        <div class="upgrade-button">
+            <div>
+                <a href="#">EFFFETTUA L'UPGRADE</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
