--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
     <link rel="stylesheet" href="css/style.css">
     <title>Spotify</title>
 </head>
@@ -21,7 +22,10 @@
 
                 <div class="main-links">
                     <ul>
-                        <li><a href="">Home</a></li>
+                        <li><a href="">
+                            <img src="img/home.svg" alt="home-icon" class="img-responsive-custom">
+                            <span>Home</span>
+                            </a></li>
                         <li><a href="">Cerca</a></li>
                         <li><a href="">La tua libreria</a></li>
                     </ul>
