--- a/index.html
+++ b/index.html
@@ -22,19 +22,52 @@
 
                 <div class="main-links">
                     <ul>
-                        <li><a href="">
-                            <img src="img/home.svg" alt="home-icon" class="img-responsive-custom">
-                            <span>Home</span>
-                            </a></li>
-                        <li><a href="">Cerca</a></li>
-                        <li><a href="">La tua libreria</a></li>
+                        <li>
+                            <div class="container_many-links clearfix">
+                                <div class="many_links_left">
+                                    <a href=""><img src="img/home.svg" alt="home-icon" class="img-responsive-custom"></a>
+                                </div>
+
+                                <div class="many_links_right">
+                                    <a href="">Home</a>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="container_many-links clearfix">
+                                <div class="many_links_left">
+                                    <a href=""><img src="img/search.svg" alt="home-icon" class="img-responsive-custom"></a>
+                                </div>
+
+                                <div class="many_links_right">
+                                    <a href="">Cerca</a>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="container_many-links clearfix">
+                                <div class="many_links_left">
+                                    <a href=""><img src="img/libreria.svg" alt="home-icon" class="img-responsive-custom"></a>
+                                </div>
+
+                                <div class="many_links_right">
+                                    <a href="">La tua libreria</a>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                 </div>
 
                 <div class="playlist-container">
                     <div class="crea-playlist">
                         <h2>PLAYLIST</h2>
-                        + Crea Playlist
+
+                        <div class="playlist-icon">
+                            
+                        </div>
+
                     </div>
 
                     <div class="wrapper-list">
