--- a/index.html
+++ b/index.html
@@ -61,11 +61,19 @@
                 </div>
 
                 <div class="playlist-container">
-                    <div class="crea-playlist">
-                        <h2>PLAYLIST</h2>
-
+                    <div class="crea-playlist clearfix">
+                        <h5>PLAYLIST</h5>
+                        <br>
                         <div class="playlist-icon">
-                            
+                            <div class="plus-icon_container center">
+                                <div class="plus-icon">
+                                    <strong>+</strong>
+                                </div>
+                            </div>
+
+                            <div class="playlist-text">
+                                Crea Playlist
+                            </div>
                         </div>
 
                     </div>
@@ -73,28 +81,23 @@
                     <div class="wrapper-list">
                         <div class="playlist-single-name">
                             <ul>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
+                                <li><a href="">Nome Playlist</a></li>
+                                <li><a href="">Nome Playlist</a></li>
+                                <li><a href="">Nome Playlist</a></li>
+                                <li><a href="">Nome Playlist</a></li>
+                                <li><a href="">Nome Playlist</a></li>
+                                <li><a href="">Nome Playlist</a></li>
+                                <li><a href="">Nome Playlist</a></li>
+                                <li><a href="">Nome Playlist</a></li>
+                                <li><a href="">Nome Playlist</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
 
                 <div class="install-app">
-                    <div>Installa app</div>
-                    John Doe
+                    <div class="install-app-text">Installa app</div>
+                    <div class="border-top">John Doe</div>
                 </div>
             </nav>
             <!--FINE NAV-->
