--- a/index.html
+++ b/index.html
@@ -87,18 +87,26 @@
                                 <li><a href="">Nome Playlist</a></li>
                                 <li><a href="">Nome Playlist</a></li>
                                 <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
 
-                <div class="install-app">
+                <!--INIZIO INSTALLA APP E PROFILE APP-->
+                <div class="profile-app-container">
                     <div class="install-app-text">Installa app</div>
-                    <div class="border-top">John Doe</div>
+                    <div class="profile-app clearfix">
+                        <div class="profile-app_left center">
+                            <img src="img/profile.svg" alt="profile-icon">
+                        </div>
+
+                        <div class="profile-app_right">
+                            John Doe
+                        </div>
+                    </div>
                 </div>
+                <!--FINE INSTALLA APP E PROFILE APP-->
+
             </nav>
             <!--FINE NAV-->
 
