--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
             <!--INIZIO NAV-->
             <nav>
                 <div class="logo">
-                    logo
+                    <div class="logo_left">
+                        <img src="img/favicon.ico" alt="spotify-logo">
+                    </div>
+
+                    <div class="logo_right">
+                        Spotify
+                    </div>
                 </div>
 
                 <div class="main-links">
