--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <!--INIZIO NAV-->
             <nav>
                 <div class="logo">
-                    <div class="logo_left">
-                        <img src="img/favicon.ico" alt="spotify-logo">
+                    <div class="logo_icon">
+                        <img src="img/logo.svg" alt="spotify-logo">
                     </div>
 
-                    <div class="logo_right">
-                        Spotify
+                    <div class="logo_icon_responsive">
+                        <img src="img/logo-small.svg" alt="spotify-logo">
                     </div>
                 </div>
 
