upgrade-button-aggiornato

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
         <!--UPGRADE TASTO-->
         <div class="upgrade-button">
-            <div>
+            <div class="button_container">
                 <a href="#">EFFFETTUA L'UPGRADE</a>
             </div>
         </div>
