--- a/index.html
+++ b/index.html
@@ -126,8 +126,33 @@
         <!--FINE MAIN-->
 
         <!--INIZIO FOOTER-->
-        <footer>
+        <footer class="clearfix">
+            <div class="song_container">
+                <div class="song_container-inner clearfix">
+                    <div class="album">
+                        <img src="img/sinister.jpeg" alt="album">
+                    </div>
+    
+                    <div class="name-album-singer">
+                        <div class="album_text">
+                            <h3>Sinister</h3>
+                            <p>lorem lorem lorem</p>
+                        </div>
+                    </div>
+    
+                    <div class="album-icons">
+                        Lorem ipsum 
+                    </div>
+                </div>
+            </div>
 
+            <div class="panel_container">
+                panel-control
+            </div>
+
+            <div class="volume_container">
+                volume
+            </div>
         </footer>
         <!--FINE FOOTER-->
 
