--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="css/style.css">
     <title>Spotify</title>
@@ -94,35 +95,6 @@
                                 <li><a href="">Nome Playlist</a></li>
                                 <li><a href="">Nome Playlist</a></li>
                                 <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Nome Playlist</a></li>
-                                <li><a href="">Ultima</a></li>
                             </ul>
                         </div>
                     </div>
@@ -156,32 +128,50 @@
         <!--FINE MAIN-->
 
         <!--INIZIO FOOTER-->
-        <footer class="clearfix">
-            <div class="song_container">
-                <div class="song_container-inner clearfix">
-                    <div class="album">
-                        <img src="img/sinister.jpeg" alt="album">
-                    </div>
-    
-                    <div class="name-album-singer">
-                        <div class="album_text">
-                            <h3>Sinister</h3>
-                            <p>lorem lorem lorem</p>
+        <footer>
+            <div class="footer-container">
+                <div class="song-control">
+                    <img src="img/sinister.jpeg" alt="album">
+
+                    <div class="name_songs">
+                        <div class="name-singer">
+                            Sinister
+                        </div>
+
+                        <div class="name-song">
+                            Brano Nome
                         </div>
                     </div>
-    
-                    <div class="album-icons">
-                        Lorem ipsum 
+
+                    <div class="song-icons">
+                        <div class="hearth-icon">
+                            <i class="far fa-heart"></i>
+                        </div>
+
+                        <div class="file-icon">
+                            <i class="far fa-folder"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="panel_container">
-                panel-control
-            </div>
+                <div class="media-control">
+                    <div class="media-control-top">
+                        <ul>
+                            <li><a href="">a</a></li>
+                            <li><a href="">b</a></li>
+                            <li><a href="">c</a></li>
+                            <li><a href="">d</a></li>
+                            <li><a href="">e</a></li>
+                        </ul>
+                    </div>
 
-            <div class="volume_container">
-                volume
+                    <div class="media-control-bottom">
+
+                    </div>
+                </div>
+
+                <div class="volume-and-controls">
+                </div>
             </div>
         </footer>
         <!--FINE FOOTER-->
