sviluppo pannello di controllo

--- a/index.html
+++ b/index.html
@@ -155,22 +155,53 @@
                 </div>
 
                 <div class="media-control">
-                    <div class="media-control-top">
+                    <div class="media-control-top center">
                         <ul>
-                            <li><a href="">a</a></li>
-                            <li><a href="">b</a></li>
-                            <li><a href="">c</a></li>
-                            <li><a href="">d</a></li>
-                            <li><a href="">e</a></li>
+                            <li>
+                                <i class="fas fa-random"></i>
+                            </li>
+                            <li>
+                                <i class="fas fa-step-backward"></i>
+                            </li>
+                            <li>
+                                <i class="far fa-play-circle"></i>
+                            </li>
+                            <li>
+                                <i class="fas fa-step-forward"></i>
+                            </li>
+                            <li>
+                                <i class="fas fa-redo-alt"></i>
+                            </li>
                         </ul>
                     </div>
 
                     <div class="media-control-bottom">
+                        <div class="time-first">
+                            0:25
+                        </div>
 
+                        <div class="time-bar-container">
+                            <div class="time-bar">
+
+                            </div>
+                        </div>
+
+                        <div class="time-second">
+                            4:35
+                        </div>
                     </div>
                 </div>
 
                 <div class="volume-and-controls">
+                    <ul>
+                        <li>m</li>
+                        <li>t</li>
+                        <li>v</li>
+                    </ul>
+
+                    <div>
+                        
+                    </div>
                 </div>
             </div>
         </footer>
