--- a/index.html
+++ b/index.html
@@ -194,13 +194,21 @@
 
                 <div class="volume-and-controls">
                     <ul>
-                        <li>m</li>
-                        <li>t</li>
-                        <li>v</li>
+                        <li>
+                            <i class="fas fa-list-ul"></i>
+                        </li>
+                        <li>
+                            <i class="fas fa-desktop"></i>
+                        </li>
+                        <li>
+                            <i class="fas fa-volume-up"></i>
+                        </li>
                     </ul>
 
-                    <div>
-                        
+                    <div class="time-bar-second-container">
+                        <div class="time-bar-second">
+
+                        </div>
                     </div>
                 </div>
             </div>
