--- a/index.html
+++ b/index.html
@@ -120,7 +120,24 @@
 
             <!--INIZIO CONTENT-->
             <div class="main-content">
+                <div class="wrapper-main">
+                    <ul>
+                        <li>
+                            IN EVIDENZA
+                            <div class="border-bottom"></div>
+                        </li>
+                        <li>PODCAST</li>
+                        <li>CLASSIFICHE</li>
+                        <li>GENERI E MOOD</li>
+                        <li>NUOVE USCITE</li>
+                        <li>SCOPRI</li>
+                    </ul>
 
+
+                    
+
+
+                </div>
             </div>
             <!--FINE CONTENT-->
 
@@ -193,17 +210,12 @@
                 </div>
 
                 <div class="volume-and-controls">
-                    <ul>
-                        <li>
-                            <i class="fas fa-list-ul"></i>
-                        </li>
-                        <li>
-                            <i class="fas fa-desktop"></i>
-                        </li>
-                        <li>
-                            <i class="fas fa-volume-up"></i>
-                        </li>
-                    </ul>
+
+                    <i class="fas fa-list-ul"></i>
+
+                    <i class="fas fa-desktop"></i>
+
+                    <i class="fas fa-volume-up"></i>
 
                     <div class="time-bar-second-container">
                         <div class="time-bar-second">
