--- a/index.html
+++ b/index.html
@@ -123,19 +123,26 @@
                 <div class="wrapper-main">
                     <ul>
                         <li>
-                            IN EVIDENZA
+                            <a href="">IN EVIDENZA</a>
                             <div class="border-bottom"></div>
                         </li>
-                        <li>PODCAST</li>
-                        <li>CLASSIFICHE</li>
-                        <li>GENERI E MOOD</li>
-                        <li>NUOVE USCITE</li>
-                        <li>SCOPRI</li>
+                        <li><a href="">PODCAST</a></li>
+                        <li><a href="">CLASSIFICHE</a></li>
+                        <li><a href="">GENERI E MOOD</a></li>
+                        <li><a href="">NUOVE USCITE</a></li>
+                        <li><a href="">SCOPRI</a></li>
                     </ul>
 
+                    <h2>Recently played</h2>
 
-                    
-
+                    <div class="wrapper-recently-played-images">
+                        <img src="img/sinister.jpeg" alt="">
+                        <img src="img/sinister.jpeg" alt="">
+                        <img src="img/sinister.jpeg" alt="">
+                        <img src="img/sinister.jpeg" alt="">
+                        <img src="img/sinister.jpeg" alt="">
+                        <img src="img/sinister.jpeg" alt="">
+                    </div>
 
                 </div>
             </div>
