--- a/index.html
+++ b/index.html
@@ -135,11 +135,25 @@
 
                     <h2>Recently played</h2>
 
-                    <div class="wrapper-recently-played-images">
+                    <div class="wrapper-images">
+                        <div class="single-image">
+                            <img src="img/sinister.jpeg" alt="">
+                            <div class="text-bottom center">
+                                <h5>Heavy Metal</h5>
+                                Subtitle
+                            </div>
+                        </div>
                         <img src="img/sinister.jpeg" alt="">
                         <img src="img/sinister.jpeg" alt="">
                         <img src="img/sinister.jpeg" alt="">
                         <img src="img/sinister.jpeg" alt="">
+                        <img src="img/sinister.jpeg" alt="">
+                    </div>
+
+                    <h2>Creato per John Doe</h2>
+                    <p>Più ascolti, più accurati saranno i suggerimenti.</p>
+
+                    <div class="wrapper-images">
                         <img src="img/sinister.jpeg" alt="">
                         <img src="img/sinister.jpeg" alt="">
                     </div>
