--- a/index.html
+++ b/index.html
@@ -282,12 +282,16 @@
                     <img src="img/sinister.jpeg" alt="album">
 
                     <div class="name_songs">
-                        <div class="name-singer">
-                            Sinister
+                        <div class="name-singer" class="hover-part">
+                            <a href="">
+                                Sinister
+                            </a>
                         </div>
 
                         <div class="name-song">
-                            Brano Nome
+                            <a href="">
+                                Brano Nome
+                            </a>
                         </div>
                     </div>
 
