sviluppo-ulteriore-hover

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             </div>
 
                             <div class="playlist-text">
-                                Crea Playlist
+                                <a href="">Crea Playlist</a>
                             </div>
                         </div>
 
